--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Trang chia sẻ key</title>
+  <title>KEY HÔM NAY</title>
   <style>
     body {
       font-family: sans-serif;
@@ -53,7 +53,7 @@
   </div>
 
   <script>
-    const ADMIN_PASSWORD = "lap123"; // 🔒 bạn đổi lại mật khẩu ở đây
+    const ADMIN_PASSWORD = "lap@#!"; // 🔒 bạn đổi lại mật khẩu ở đây
     const keyDisplay = document.getElementById("keyDisplay");
     const copyBtn = document.getElementById("copyBtn");
 
@@ -99,3 +99,4 @@
   </script>
 </body>
 </html>
+
