--- a/index.html
+++ b/index.html
@@ -1,102 +1,150 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>KEY HÔM NAY</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Key Hôm Nay</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    body {
-      font-family: sans-serif;
-      background: #f4f4f4;
-      padding: 20px;
-    }
-    .box {
-      max-width: 500px;
-      margin: 0 auto;
-      background: white;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-    }
-    textarea, input {
-      width: 100%;
-      margin: 8px 0;
-      padding: 8px;
-    }
-    button {
-      padding: 8px 14px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .btn {
-      background: #3498db;
-      color: white;
-    }
-    .btn-copy {
-      background: #2ecc71;
-      color: white;
-    }
+    /* Small extra polish */
+    body { -webkit-font-smoothing:antialiased; }
+    .glass { backdrop-filter: blur(6px); background-color: rgba(255,255,255,0.6); }
+    [data-theme="dark"] .glass { background-color: rgba(17,24,39,0.6); }
+    .fade-in { animation: fadeIn .5s ease both; }
+    @keyframes fadeIn { from { opacity: 0; transform: translateY(6px);} to {opacity:1; transform:none;} }
   </style>
 </head>
-<body>
-  <div class="box">
-    <h2>📢 Key hôm nay</h2>
-    <div id="keyDisplay">Chưa có key nào.</div>
-    <button id="copyBtn" class="btn-copy" style="display:none;">Copy key</button>
+<body class="min-h-screen bg-gradient-to-b from-sky-50 to-white dark:from-slate-900 dark:to-slate-800 text-slate-900 dark:text-slate-100" data-theme="light">
+  <div class="max-w-xl mx-auto p-4">
+    <header class="flex items-center justify-between mb-6">
+      <div>
+        <h1 class="text-2xl font-extrabold">Key Hôm Nay</h1>
+        <p class="text-sm text-slate-500 dark:text-slate-300">SKY- CHEAT</p>
+      </div>
+      <div class="flex items-center space-x-2">
+        <button id="themeToggle" aria-label="toggle theme" class="p-2 rounded-lg glass shadow">
+          <!-- simple icon -->
+          <svg id="themeIcon" xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m8.66-9h-1M4.34 12h-1M18.36 5.64l-.7.7M6.34 17.66l-.7.7M18.36 18.36l-.7-.7M6.34 6.34l-.7-.7M12 7a5 5 0 100 10 5 5 0 000-10z"/></svg>
+        </button>
+      </div>
+    </header>
 
-    <hr style="margin: 20px 0;">
-    <h3>Dành cho admin</h3>
-    <input type="password" id="adminPass" placeholder="Nhập mật khẩu admin" />
-    <textarea id="newKey" rows="4" placeholder="Nhập key mới..."></textarea>
-    <button id="saveBtn" class="btn">Lưu key</button>
+    <main class="space-y-4">
+      <section class="p-4 rounded-2xl glass shadow fade-in">
+        <div class="flex items-center justify-between">
+          <div>
+            <div id="dateStr" class="text-sm text-slate-600 dark:text-slate-300">--/--/----</div>
+            <div id="timeStr" class="text-3xl font-bold mt-1">--:--:--</div>
+          </div>
+          <div class="text-right text-sm text-slate-500 dark:text-slate-400">
+            <div id="weekday">---</div>
+            <div id="tz">UTC+7</div>
+          </div>
+        </div>
+      </section>
+
+      <section class="p-5 rounded-2xl glass shadow fade-in">
+        <label class="text-xs uppercase tracking-wide text-slate-500 dark:text-slate-300">Key</label>
+        <!-- === EDIT KEY HERE === -->
+        <!-- If you update the key in GitHub, edit the value of KEY_VAR below, or replace the innerText of <span id="keyText">. -->
+        <div class="mt-3 flex items-center justify-between">
+          <div class="break-words max-w-[65%]">
+            <p id="keyText" class="text-lg font-semibold select-text">SKYCheat-1d-h90bp7n18mm</p>
+            <p id="keyNote" class="text-xs text-slate-500 dark:text-slate-400 mt-1">KEY HÔM </p>
+          </div>
+          <div class="flex flex-col items-center space-y-2">
+            <button id="copyBtn" class="px-4 py-2 rounded-lg shadow font-medium hover:opacity-95 transition">Sao chép</button>
+            <button id="refreshBtn" class="px-3 py-1 rounded-md text-sm glass shadow">Làm mới</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="p-4 rounded-2xl glass shadow text-sm text-slate-600 dark:text-slate-300 fade-in">
+        <p><strong>Ghi chú:</strong> ...... <code>KEY_VAR</code>..... <code>span#keyText</code>.</p>
+        <p class="mt-2">Mở file bằng trình duyệt trên điện thoại hoặc dùng GitHub Pages để hiển thị công khai.</p>
+      </section>
+    </main>
+
+    <footer class="mt-6 text-center text-xs text-slate-400">Designed for mobile • Mở trên điện thoại để cảm nhận giao diện</footer>
   </div>
 
+  <div id="toast" class="fixed left-1/2 -translate-x-1/2 bottom-8 hidden px-4 py-2 rounded-full shadow-lg glass text-sm"></div>
+
   <script>
-    const ADMIN_PASSWORD = "lap@#!"; // 🔒 bạn đổi lại mật khẩu ở đây
-    const keyDisplay = document.getElementById("keyDisplay");
-    const copyBtn = document.getElementById("copyBtn");
+    // ====== CONFIG - edit this value to change key when you update on GitHub ======
+    const KEY_VAR = 'YOUR-KEY-HERE'; // <-- Replace this value with the new key every day
+    // ===========================================================================
 
-    // Khi mở web -> hiện key từ localStorage
-    function showKey() {
-      const saved = localStorage.getItem("todayKey");
-      if (saved) {
-        keyDisplay.innerText = saved;
-        copyBtn.style.display = "inline-block";
-      } else {
-        keyDisplay.innerText = "Chưa có key nào.";
-        copyBtn.style.display = "none";
-      }
+    // Init UI
+    const keyText = document.getElementById('keyText');
+    const copyBtn = document.getElementById('copyBtn');
+    const refreshBtn = document.getElementById('refreshBtn');
+    const dateStr = document.getElementById('dateStr');
+    const timeStr = document.getElementById('timeStr');
+    const weekday = document.getElementById('weekday');
+    const tz = document.getElementById('tz');
+    const toast = document.getElementById('toast');
+
+    // Put key into DOM (so user can edit in GitHub)
+    keyText.innerText = KEY_VAR || 'Chưa có key';
+
+    // Clock
+    function pad(n){return n<10? '0'+n : n}
+    function updateClock(){
+      // Use local time (user's device). If you want server time, consider adding a server.
+      const now = new Date();
+      const day = pad(now.getDate());
+      const month = pad(now.getMonth()+1);
+      const year = now.getFullYear();
+      const hh = pad(now.getHours());
+      const mm = pad(now.getMinutes());
+      const ss = pad(now.getSeconds());
+      dateStr.innerText = `${day}/${month}/${year}`;
+      timeStr.innerText = `${hh}:${mm}:${ss}`;
+      weekday.innerText = now.toLocaleDateString('vi-VN', { weekday: 'long' });
     }
-    showKey();
+    setInterval(updateClock, 1000);
+    updateClock();
 
-    // Copy key
-    copyBtn.onclick = () => {
-      const text = localStorage.getItem("todayKey");
-      navigator.clipboard.writeText(text);
-      alert("Đã copy key!");
-    };
+    // Copy
+    async function showToast(msg){
+      toast.innerText = msg; toast.classList.remove('hidden');
+      setTimeout(()=> toast.classList.add('opacity-0'), 10);
+      setTimeout(()=>{ toast.classList.add('hidden'); toast.classList.remove('opacity-0'); }, 1600);
+    }
 
-    // Lưu key mới (chỉ admin)
-    document.getElementById("saveBtn").onclick = () => {
-      const pass = document.getElementById("adminPass").value;
-      const newKey = document.getElementById("newKey").value.trim();
-
-      if (pass !== ADMIN_PASSWORD) {
-        alert("Sai mật khẩu!");
-        return;
+    copyBtn.addEventListener('click', async ()=>{
+      try{
+        await navigator.clipboard.writeText(keyText.innerText);
+        showToast('Đã sao chép');
+      }catch(e){
+        // fallback
+        const ta = document.createElement('textarea'); ta.value = keyText.innerText; document.body.appendChild(ta);
+        ta.select(); document.execCommand('copy'); document.body.removeChild(ta);
+        showToast('Đã sao chép (fallback)');
       }
-      if (!newKey) {
-        alert("Vui lòng nhập key!");
-        return;
-      }
+    });
 
-      localStorage.setItem("todayKey", newKey);
-      alert("Đã lưu key mới!");
-      showKey();
-      document.getElementById("newKey").value = "";
-    };
+    refreshBtn.addEventListener('click', ()=>{ location.reload(); });
+
+    // Theme toggle
+    const themeToggle = document.getElementById('themeToggle');
+    const body = document.body;
+    function setTheme(dark){
+      if(dark){ body.setAttribute('data-theme','dark'); document.documentElement.classList.add('dark'); }
+      else { body.setAttribute('data-theme','light'); document.documentElement.classList.remove('dark'); }
+    }
+    // remember
+    const stored = localStorage.getItem('siteTheme');
+    setTheme(stored === 'dark');
+    themeToggle.addEventListener('click', ()=>{
+      const isDark = document.body.getAttribute('data-theme') === 'dark';
+      setTheme(!isDark);
+      localStorage.setItem('siteTheme', !isDark ? 'dark' : 'light');
+    });
+
+    // Accessibility: allow long-press to select key
+    keyText.addEventListener('click', ()=>{ navigator.clipboard && navigator.clipboard.writeText && showToast('Nhấn Sao chép để copy') });
   </script>
 </body>
 </html>
-
