Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="mt-3 flex items-center justify-between">
           <div class="break-words max-w-[65%]">
             <p id="keyText" class="text-lg font-semibold select-text">SKYCheat-1d-h90bp7n18mm</p>
-            <p id="keyNote" class="text-xs text-slate-500 dark:text-slate-400 mt-1">KEY HÔM </p>
+            <p id="keyNote" class="text-xs text-slate-500 dark:text-slate-400 mt-1">KEY HÔM NAY </p>
           </div>
           <div class="flex flex-col items-center space-y-2">
             <button id="copyBtn" class="px-4 py-2 rounded-lg shadow font-medium hover:opacity-95 transition">Sao chép</button>
@@ -60,19 +60,19 @@
       </section>
 
       <section class="p-4 rounded-2xl glass shadow text-sm text-slate-600 dark:text-slate-300 fade-in">
-        <p><strong>Ghi chú:</strong> ...... <code>KEY_VAR</code>..... <code>span#keyText</code>.</p>
-        <p class="mt-2">Mở file bằng trình duyệt trên điện thoại hoặc dùng GitHub Pages để hiển thị công khai.</p>
+        <p><strong>Ghi chú:</strong> ...... <code>...</code>..... <code></code></p>
+        <p class="mt-2">....</p>
       </section>
     </main>
 
-    <footer class="mt-6 text-center text-xs text-slate-400">Designed for mobile • Mở trên điện thoại để cảm nhận giao diện</footer>
+    <footer class="mt-6 text-center text-xs text-slate-400">Designed for mobile • SKY- CHEATCHEAT</footer>
   </div>
 
   <div id="toast" class="fixed left-1/2 -translate-x-1/2 bottom-8 hidden px-4 py-2 rounded-full shadow-lg glass text-sm"></div>
 
   <script>
     // ====== CONFIG - edit this value to change key when you update on GitHub ======
-    const KEY_VAR = 'YOUR-KEY-HERE'; // <-- Replace this value with the new key every day
+    const KEY_VAR = 'SKYCheat-1d-h90bp7n18mm'; // <-- Replace this value with the new key every day
     // ===========================================================================
 
     // Init UI
@@ -148,3 +148,4 @@
   </script>
 </body>
 </html>
+
