--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <script>
     // ====== CONFIG - edit this value to change key when you update on GitHub ======
-    const KEY_VAR = 'SKYCheat-1d-h90bp7n18mm'; // <-- Replace this value with the new key every day
+    const KEY_VAR = 'SKYCheat-1d-sdls5j9chys'; // <-- Replace this value with the new key every day
     // ===========================================================================
 
     // Init UI
@@ -148,4 +148,5 @@
   </script>
 </body>
 </html>
+
 
