--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Key Hôm Nay</title>
+  <title>SKY-CHEAT</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     /* Small extra polish */
@@ -60,12 +60,12 @@
       </section>
 
       <section class="p-4 rounded-2xl glass shadow text-sm text-slate-600 dark:text-slate-300 fade-in">
-        <p><strong>Ghi chú:</strong> ...... <code>...</code>..... <code></code></p>
-        <p class="mt-2">....</p>
+        <p><strong>Ghi chú:</strong> Đã Cập Nhật Key <code>24/10/2025 </code>. <code></code></p>
+        <p class="mt-2">NẾU NHẬP KEY BÁO LỖI XIN VUI LÒNG NHẮN ADMIN</p>
       </section>
     </main>
 
-    <footer class="mt-6 text-center text-xs text-slate-400">Designed for mobile • SKY- CHEATCHEAT</footer>
+    <footer class="mt-6 text-center text-xs text-slate-400"> • SKY- CHEATCHEAT</footer>
   </div>
 
   <div id="toast" class="fixed left-1/2 -translate-x-1/2 bottom-8 hidden px-4 py-2 rounded-full shadow-lg glass text-sm"></div>
@@ -148,5 +148,6 @@
   </script>
 </body>
 </html>
+
 
 
